# redCodeEngine

./: CMakeLists.txt  Class_Diagram.puml  README.md  install.sh
include/Core/: Engine.hpp
include/Core/Components/Manager/: ComponentManager.hpp
include/Core/Components/Pool/: ComponentPool.hpp
include/Core/Entity/: AEntity.hpp  Entity.hpp
include/Core/Entity/Manager/: EntityManager.hpp
include/Core/Entity/Pool/: EntityPool.hpp
include/Core/Entity/utils/: EntityTable.hpp
include/Core/Scenes/: AScene.hpp  Scene.hpp  SceneManager.hpp
include/Core/Scenes/Manager/: SceneManager.hpp
include/Core/Systems/: ASystem.hpp
include/utils/: Clock.hpp  Engine.hpp  TypeID.hpp
src/: main.cpp
src/Core/: Engine.cpp  GlobalVariables.hpp
src/Core/Allocators/: Allocator.cpp  Allocator.hpp  PoolAllocator.hpp
src/Core/Allocators/Pool/: ObjectPool.hpp  PoolManager.hpp
src/Core/Components/: AComponent.hpp  Component.hpp
src/Core/Components/Manager/: ComponentManager.cpp  ComponentManager.hpp
src/Core/Components/Pool/: ComponentPool.hpp  IComponentPool.hpp
src/Core/Entity/: AEntity.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityPool.hpp  IEntityPool.hpp
src/Core/Entity/Manager/: EntityManager.cpp  EntityManager.hpp
src/Core/Entity/Pool/: EntityPool.hpp  IEntityPool.hpp
src/Core/Entity/utils/: EntityTable.hpp
src/Core/Scenes/: SceneManager.cpp
src/Core/Scenes/Manager/: SceneManager.cpp
src/Core/Systems/: ASystem.hpp  System.hpp
src/Core/Systems/Manager/: SystemManager.cpp
src/Core/Systems/Managers/: SystemManager.cpp  SystemManager.hpp
src/Entity_Tests/: Bomb.cpp  Bomb.hpp  Transform.cpp  Transform.hpp
src/utils/: Clock.cpp  Table.hpp  TypeID.hpp
tests/: CMakeLists.txt  allocator_tests.cpp  launch_tests.sh
